--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
                             <use href="#grossing"/>
                         </svg>
 
-                        Highest grossing movies in history</h2>
-                        <object data="VIZ.svg" type="image/svg+xml" class="w-100">
+                        Highest grossing movies in history<h2><svg width="24" height="24"><use href="#highest"/></svg> Highest grossing movies in history</h2>
+                        <object data="viz.svg" type="image/svg+xml" class="w-100">
                             <img src="alt.png"/>
-                        </object>
+                        </object>
                     </div>
                     <div class="col-lg-4">
                         <div class="row ps-5">
