--- a/index.html
+++ b/index.html
@@ -196,12 +196,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-8 pe-5">
-                        <h2>
-                        <svg width="35" height="35">
-                            <use href="#grossing"/>
-                        </svg>
-
-                        Highest grossing movies in history<h2><svg width="24" height="24"><use href="#highest"/></svg> Highest grossing movies in history</h2>
+                        <h2><svg width="24" height="24"><use href="#grossing"/></svg> Highest grossing movies in history</h2>
                         <object data="viz.svg" type="image/svg+xml" class="w-100">
                             <img src="alt.png"/>
                         </object>
